# broutils

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  vite.config.ts
scripts/: download-ffmpeg-windows.sh
src/: App.css  App.tsx  main.tsx  providers.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compress.rs  lib.rs  main.rs
src/components/: bulk-rename.tsx  compress-videos.tsx  convert-images.tsx  icon.tsx
src/components/shared/: drop-zone.tsx
src/lib/: compress.ts  convert.ts  files.ts  rename.ts  use-file-drop.ts
