[package]
name = "broutils"
version = "0.1.0"
description = "A multi-tool desktop utility"
authors = ["hoshangdev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "broutils_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Used by Convert Videos to run the bundled FFmpeg sidecar and notify on finish.
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parses FFmpeg progress output (Duration:/time= lines) for Convert Videos.
regex = "1"
# Image conversion. `avif` enables the AVIF encoder; the rest of the formats
# (jpeg/png/gif/bmp/tiff/ico/webp) ship in the default features.
image = { version = "0.25", features = ["avif"] }
# Lossy WebP encoding with a quality knob (the `image` crate's WebP encoder is
# lossless-only).
webp = "0.3"

# HEIC/HEIF decoding via system libheif (input only). Requires libheif to be
# installed on the build/host machine (e.g. `brew install libheif`). There is no
# system libheif for the Windows cross-compile target, so HEIC input is
# macOS/Linux-only and the dependency is gated off Windows.
[target.'cfg(not(target_os = "windows"))'.dependencies]
libheif-rs = "1.1"

# libwebp's SSE4.1 source files use intrinsics that need the `-msse4.1` arch
# flag, which libwebp-sys only adds when its `sse41` feature is enabled. MSVC's
# cl.exe tolerates the intrinsics without it, but clang-cl (used by cargo-xwin
# for the Windows cross-compile) rejects them — so enable the feature there.
[target.'cfg(target_os = "windows")'.dependencies]
libwebp-sys = { version = "0.9", features = ["sse41"] }

